--- a/report.ipynb
+++ b/report.ipynb
@@ -2,11 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Network Algorithms Homework Project"
+    "# Network Algorithms Homework Project\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obtain the data\n",
+    "airports = pd.read_csv('airports.csv')\n",
+    "routes = pd.read_csv('routes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_na(df, column):\n",
+    "    na_rows = df[column].str.len() < 3\n",
+    "    return df[~na_rows]\n",
+    "\n",
+    "# Filter the N/A values in the data\n",
+    "filtered_airports = filter_na(airports, \"IATA\")\n",
+    "filtered_routes = filter_na(routes, 'Source airport ID')\n",
+    "filtered_routes = filter_na(filtered_routes, 'Destination airport ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_countries_of(region):\n",
+    "    if (region == 'Europe'):\n",
+    "        import requests\n",
+    "        response = requests.get(\"https://restcountries.com/v3.1/region/europe\")\n",
+    "        l = response.json()\n",
+    "        europe = []\n",
+    "        for i in range(len(l)):\n",
+    "            europe.append(l[i]['name']['common'])\n",
+    "        return europe\n",
+    "    # future support for other regions\n",
+    "\n",
+    "def filter_to_europe(df, attr):\n",
+    "    europe = get_countries_of('Europe')\n",
+    "    return df[df[attr].isin(europe)]\n",
+    "\n",
+    "# Choose only one region (europe in our example)\n",
+    "filtered_european_airports = filter_to_europe(filtered_airports, 'Country')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter routes according to filtered airports\n",
+    "iatas = filtered_european_airports['IATA']\n",
+    "filtered_european_routes = routes[routes['Source airport'].isin(iatas) & routes['Destination airport'].isin(iatas)]"
    ]
   },
   {
@@ -14,10 +88,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "# returns all the information about an airport by its IATA\n",
     "def airport_info(data_airports, iata):\n",
@@ -61,14 +146,22 @@
    "hash": "b70cfb9d0a37b53fbe2721b3003f10b9a464a532f8637d5e8a9bee6cf3df3814"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('netalg': venv)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
