improved airport selection

--- a/report.ipynb
+++ b/report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
     "import numpy as np\n",
     "from geopy import distance\n",
     "\n",
-    "pd.set_option(\"display.max_rows\", None, \"display.max_columns\", None)\n"
+    "# pd.set_option(\"display.max_rows\", None, \"display.max_columns\", None)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,16 @@
     "# Filter the N/A values in the data\n",
     "filtered_airports = filter_na(airports, \"IATA\")\n",
     "filtered_routes = filter_na(routes, 'Source airport ID')\n",
-    "filtered_routes = filter_na(filtered_routes, 'Destination airport ID')"
+    "filtered_routes = filter_na(filtered_routes, 'Destination airport ID')\n",
+    "\n",
+    "# change the datatype in routes\n",
+    "filtered_routes['Source airport ID'] = filtered_routes['Source airport ID'].astype('int64')\n",
+    "filtered_routes['Destination airport ID'] = filtered_routes['Destination airport ID'].astype('int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter routes according to filtered airports\n",
-    "iatas = filtered_european_airports['IATA']\n",
-    "filtered_european_routes = filtered_routes[filtered_routes['Source airport'].isin(iatas) & filtered_routes['Destination airport'].isin(iatas)]\n",
+    "airport_id = filtered_european_airports['Airport ID']\n",
+    "filtered_european_routes = filtered_routes[filtered_routes['Source airport ID'].isin(airport_id) & filtered_routes['Destination airport ID'].isin(airport_id)]\n",
     "# print(filtered_european_routes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +107,8 @@
     "            source_id = routes['Source airport ID'][ind]\n",
     "            destination_id = routes['Destination airport ID'][ind]\n",
     "\n",
-    "            source = airports.loc[airports['Airport ID'] == int(source_id)]\n",
-    "            destination = airports.loc[airports['Airport ID'] == int(destination_id)]\n",
+    "            source = airports.loc[airports['Airport ID'] == source_id]\n",
+    "            destination = airports.loc[airports['Airport ID'] == destination_id]\n",
     "\n",
     "            if(\n",
     "                len(source) == 0\n",
@@ -133,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16583,8 +16587,7 @@
    "hash": "b70cfb9d0a37b53fbe2721b3003f10b9a464a532f8637d5e8a9bee6cf3df3814"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.8.10 64-bit ('netalg': venv)",
    "name": "python3"
   },
   "language_info": {
