continued maryams code

--- a/report.ipynb
+++ b/report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,24 +89,33 @@
     "    europe = get_countries_of('Europe')\n",
     "    return df[df[attr].isin(europe)]\n",
     "\n",
+    "def filter_to_countries(df, countries):\n",
+    "    return df[df['Country'].isin(countries)]\n",
+    "\n",
     "# Choose only one region (europe in our example)\n",
-    "filtered_european_airports = filter_to_europe(filtered_airports, 'Country')"
+    "filtered_european_airports = filter_to_europe(filtered_airports, 'Country')\n",
+    "\n",
+    "# Choose only one country (France in our example)\n",
+    "filtered_some_airports = filter_to_countries(filtered_airports, ['France', 'Germany', 'United Kingdom'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter routes according to filtered airports\n",
     "airport_id = filtered_european_airports['Airport ID']\n",
-    "filtered_european_routes = filtered_routes[filtered_routes['Source airport ID'].isin(airport_id) & filtered_routes['Destination airport ID'].isin(airport_id)]"
+    "filtered_european_routes = filtered_routes[filtered_routes['Source airport ID'].isin(airport_id) & filtered_routes['Destination airport ID'].isin(airport_id)]\n",
+    "\n",
+    "airport_id = filtered_some_airports['Airport ID']\n",
+    "filtered_some_routes = filtered_routes[filtered_routes['Source airport ID'].isin(airport_id) & filtered_routes['Destination airport ID'].isin(airport_id)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,17 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modified_routes = add_coords_to_routes(filtered_european_routes, filtered_european_airports)\n",
-    "# print(modified_routes.head)"
+    "# modified_routes = add_coords_to_routes(filtered_european_routes, filtered_european_airports)\n",
+    "\n",
+    "modified_some_routes = add_coords_to_routes(filtered_some_routes, filtered_some_airports)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,75 +183,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "      Source airport Destination airport     Distance\n0                AER                 KZN  1507.989671\n1                ASF                 KZN  1040.943243\n2                ASF                 MRV   449.036643\n3                CEK                 KZN   773.126226\n4                CEK                 OVB  1343.161093\n...              ...                 ...          ...\n16372            ORY                 FNC  2391.848773\n16373            ORY                 LIS  1439.045374\n16374            ORY                 OPO  1202.317838\n16375            ORY                 VKO  2476.274933\n16376            VKO                 ORY  2476.274933\n\n[16377 rows x 3 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dist = get_dists(modified_routes)\n",
-    "\n",
-    "# df = modified_routes[['Source airport','Destination airport']]\n",
-    "# df['Dist'] = dist\n",
+    "# dist = get_dists(modified_routes)\n",
+    "dist_some = get_dists(modified_some_routes)\n",
     "\n",
     "# array dist is an array of all the distances between sources and destinations that should be created and filled by Rustam\n",
     "# once it's filled a new data frame with the Source, Destination and Distance values will be created\n",
-    "distances = pd.Series(dist, name = 'Distance')\n",
-    "data = [filtered_european_routes['Source airport'].reset_index(drop=True),filtered_european_routes['Destination airport'].reset_index(drop=True), distances.reset_index(drop=True)]\n",
+    "# distances = pd.Series(dist, name = 'Distance')\n",
+    "distances_some = pd.Series(dist_some, name = 'Distance')\n",
+    "# data = [filtered_european_routes['Source airport'].reset_index(drop=True),filtered_european_routes['Destination airport'].reset_index(drop=True), distances.reset_index(drop=True)]\n",
+    "data_some = [filtered_some_routes['Source airport'].reset_index(drop=True),filtered_some_routes['Destination airport'].reset_index(drop=True), distances_some.reset_index(drop=True)]\n",
     "\n",
     "# new DataFrame only with the Source, Destination and Distance values\n",
-    "df = pd.DataFrame(data).T\n",
+    "# df = pd.DataFrame(data).T\n",
+    "df_some = pd.DataFrame(data_some).T\n",
     "# print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-148-b89c614b5375>, line 54)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-148-b89c614b5375>\"\u001b[0;36m, line \u001b[0;32m54\u001b[0m\n\u001b[0;31m    Charles_Frankfurt = get_path(G, 'CDG', , weight)\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Creating a graph from the filtered european routes\n",
-    "G = nx.from_pandas_edgelist(df, source='Source airport', target='Destination airport', edge_attr=True, create_using=nx.DiGraph)\n",
-    "\n",
+    "# G = nx.from_pandas_edgelist(df, source='Source airport', target='Destination airport', edge_attr=True, create_using=nx.DiGraph)\n",
+    "G = nx.from_pandas_edgelist(df_some, source='Source airport', target='Destination airport', edge_attr=True, create_using=nx.DiGraph)\n",
+    "nx.draw(G, with_labels=True)\n",
     "# Network Density\n",
-    "network_density = network_density(G)\n",
-    "print(\"Network Density = \", network_density)\n",
+    "network_densit = network_density(G)\n",
+    "print(\"Network Density = \", network_densit)\n",
     "\n",
     "# Network Diameter\n",
-    "netwirk_diameter = network_diameter(G, 'Dist')\n",
-    "print(\"Network Diameter = \", network_density)\n",
+    "network_diamete = network_diameter(G, 'Distance')\n",
+    "print(\"Network Diameter = \", network_diamete)\n",
     "\n",
     "# Network Average Path Length\n",
-    "napl = network_average_path_length(G, 'Dist')\n",
+    "napl = network_average_path_length(G, 'Distance')\n",
     "print(\"Network Average Path Length = \", napl)\n",
     "\n",
-    "# Get all the paths in Graph\n",
-    "paths = get_all_pathes(G, 'Dist')\n",
-    "print(\"Paths: \", paths)\n",
+    "# # Get all the paths in Graph\n",
+    "# paths = get_all_pathes(G, 'Dist')\n",
+    "# print(\"Paths: \", paths)\n",
     "\n",
     "#Closeness Centrality of Airport\n",
-    "cc_CDG = closeness_centrality(G, 'CDG', 'Dist')\n",
+    "cc_CDG = closeness_centrality(G, 'CDG', 'Distance')\n",
     "cc_LHR = closeness_centrality(G, 'LHR', 'Dist')\n",
-    "cc_FRA = closeness_centrality(G, 'FRA', 'Dist')\n",
+    "cc_FRA = closeness_centrality(G, 'FRA', 'Distance')\n",
     "\n",
     "print(\"Closeness Centrality of Charles de Gaulle Airport: \", cc_CDG)\n",
     "print(\"Closeness Centrality of Heathrow Airport: \", cc_LHR)\n",
-    "print(\"Closeness Centrality of Frankfurt Airport: \", cc_LHR)\n",
+    "print(\"Closeness Centrality of Frankfurt Airport: \", cc_FRA)\n",
     "\n",
     "\n",
     "degree_CDG = degree(G, 'CDG')\n",
@@ -268,38 +263,32 @@
     "print(\"Inflow Degree of Frankfurt Airport: \", inflow_FRA)\n",
     "print(\"Outflow Degree of Frankfurt Airport: \", outflow_FRA)\n",
     "\n",
-    "Charles_Frankfurt = get_path(G, 'CDG', 'FRA' , 'Dist')\n",
+    "Charles_Frankfurt = get_path(G, 'CDG', 'FRA' , 'Distance')\n",
+    "Charles_Hamburg = get_path(G, 'CDG', 'HAM', 'Distance')\n",
     "Frankfurt_Heathrow = get_path(G, 'FRA', 'LHR', 'Dist')\n",
     "\n",
     "print(\"Path CDG-->FRA \", Charles_Frankfurt)\n",
+    "# print(\"Path CDG-->HAM \", Charles_Hamburg)\n",
     "print(\"Path FRA-->LHR \", Frankfurt_Heathrow)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "      Source airport Destination airport     Distance\n0                AER                 KZN  1507.989671\n1                ASF                 KZN  1040.943243\n2                ASF                 MRV   449.036643\n3                CEK                 KZN   773.126226\n4                CEK                 OVB  1343.161093\n...              ...                 ...          ...\n16372            ORY                 FNC  2391.848773\n16373            ORY                 LIS  1439.045374\n16374            ORY                 OPO  1202.317838\n16375            ORY                 VKO  2476.274933\n16376            VKO                 ORY  2476.274933\n\n[16377 rows x 3 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
-    "# array dist is an array of all the distances between sources and destinations that should be created and filled by Rustam\n",
-    "# once it's filled a new data frame with the Source, Destination and Distance values will be created\n",
-    "distances = pd.Series(dist, name = 'Distance')\n",
-    "data = [filtered_european_routes['Source airport'].reset_index(drop=True),filtered_european_routes['Destination airport'].reset_index(drop=True), distances.reset_index(drop=True)]\n",
+    "# # array dist is an array of all the distances between sources and destinations that should be created and filled by Rustam\n",
+    "# # once it's filled a new data frame with the Source, Destination and Distance values will be created\n",
+    "# distances = pd.Series(dist, name = 'Distance')\n",
+    "# data = [filtered_european_routes['Source airport'].reset_index(drop=True),filtered_european_routes['Destination airport'].reset_index(drop=True), distances.reset_index(drop=True)]\n",
     "\n",
-    "# new DataFrame only with the Source, Destination and Distance values\n",
-    "df = pd.DataFrame(data).T\n",
-    "print(df)"
+    "# # new DataFrame only with the Source, Destination and Distance values\n",
+    "# df = pd.DataFrame(data).T\n",
+    "# print(df)"
    ]
   },
   {
@@ -316,8 +305,8 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
-   "name": "python3",
-   "language": "python"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -329,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10-final"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
